code review - wasn't running before because formatted was an outdated java feature so I had to update to allow build to run.